// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`build-index root-and-routes 1`] = `
Array [
  Object {
    "__dirname": "root-and-routes",
    "handler": [Function],
    "params": Array [],
    "path": "/",
    "subRoutesExist": true,
  },
  Object {
    "__dirname": "root-and-routes/routes/about",
    "handler": [Function],
    "params": Array [],
    "path": "/about",
    "subRoutesExist": false,
  },
]
`;

exports[`build-index root-only 1`] = `
Array [
  Object {
    "__dirname": "root-only",
    "handler": [Function],
    "params": Array [],
    "path": "/",
    "subRoutesExist": false,
  },
]
`;

exports[`build-index routes-children 1`] = `
Array [
  Object {
    "__dirname": "routes-children/routes/blog/routes/index",
    "handler": [Function],
    "params": Array [],
    "path": "/blog/",
    "subRoutesExist": false,
  },
  Object {
    "__dirname": "routes-children/routes/blog/routes/post",
    "handler": [Function],
    "params": Array [],
    "path": "/blog/post",
    "subRoutesExist": false,
  },
]
`;

exports[`build-index routes-only 1`] = `
Array [
  Object {
    "__dirname": "routes-only/routes/index",
    "handler": [Function],
    "params": Array [],
    "path": "/",
    "subRoutesExist": false,
  },
  Object {
    "__dirname": "routes-only/routes/about",
    "handler": [Function],
    "params": Array [],
    "path": "/about",
    "subRoutesExist": false,
  },
]
`;
